--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/Name.png" sizes="40x45" />
-    <link rel="icon" type="image/png" href="./src/assets/Name.png" sizes="16x16" />
-    <link rel="apple-touch-icon" href="./src/assets/Name.png" sizes="180x180" />
+    <link rel="icon" type="image/png" href="./src/assets/6.png" sizes="60x60" />
+    <link rel="icon" type="image/png" href="./src/assets/6.png" sizes="16x16" />
+    <link rel="apple-touch-icon" href="./src/assets/6.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Krish</title>
   </head>
